--- a/Rotten Mangoes/Base.lproj/Main.storyboard
+++ b/Rotten Mangoes/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <outlet property="movieImage" destination="6pg-Nr-jIH" id="Qlc-SN-YMt"/>
+                                    <outlet property="movieImageView" destination="6pg-Nr-jIH" id="75u-M8-c8p"/>
                                     <outlet property="movieTitleLabel" destination="T3m-az-1SG" id="I7d-Hj-L7m"/>
                                     <segue destination="X9d-GR-nKS" kind="show" identifier="showMovieDetail" id="F3F-be-iBC"/>
                                 </connections>
